base: records keywords wrapping fix
* Fixes how keywords are wrapped. (closes #77)

--- a/zenodo/base/static/less/zenodo.less
+++ b/zenodo/base/static/less/zenodo.less
@@ -684,6 +684,10 @@ h1, h2, h3 {
   color: #fff;
 }
 
+.metadata .label[itemprop=keywords] {
+  white-space: normal;
+}
+
 .tablink img {
   display: none;
 }
